Fix code font size on small screens

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -5,7 +5,7 @@
 }
 @media only screen and (max-width: 1000px) {
   .highlight {
-    font-size: 1.1em;
+    font-size: 1em;
   }
 }
 @media only screen and (min-width: 1000px) {
